manifests/opensearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch
  namespace: opensearch
spec:
  selector:
    app: opensearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
